--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -54,9 +54,11 @@
     <Compile Include="FileManager.cs" />
     <Compile Include="IrcClient.cs" />
     <Compile Include="MainLogic.cs" />
+    <Compile Include="NotificationSoundManager.cs" />
     <Compile Include="Pinger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Speaker.cs" />
     <Compile Include="TTS.cs" />
   </ItemGroup>
   <ItemGroup>
