--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -49,8 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioDeviceManager.cs" />
-    <Compile Include="Command.cs" />
-    <Compile Include="CommandProcessor.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="CommandIdentifier.cs" />
+    <Compile Include="CommantProcessor.cs" />
+    <Compile Include="UserCooldown.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="IrcClient.cs" />
     <Compile Include="MainLogic.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="Pinger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoundboardManager.cs" />
     <Compile Include="Speaker.cs" />
     <Compile Include="TTS.cs" />
   </ItemGroup>
