Channel Points integration + Clean up and Commenting
- You can now trigger the Soundboard via Channel Points
- Further code commenting and cleaning to make it more shinier and nicer

--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioDeviceManager.cs" />
-    <Compile Include="Bot.cs" />
+    <Compile Include="PubSubService.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="CommandIdentifier.cs" />
     <Compile Include="CommantProcessor.cs" />
