--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -82,6 +82,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Speech" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -133,11 +134,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioDeviceManager.cs" />
-    <Compile Include="command.cs" />
+    <Compile Include="AudioMixer.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="ExecutionOrderManager.cs" />
     <Compile Include="PubSubService.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="CommandIdentifier.cs" />
-    <Compile Include="CommantProcessor.cs" />
+    <Compile Include="CommentProcessor.cs" />
     <Compile Include="UserCooldown.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="IrcClient.cs" />
