Bugfixes, ne commands implemented (WIP)

--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -166,5 +166,8 @@
     <EmbeddedResource Include="SettingsRef\aliaslistRef.txt" />
     <EmbeddedResource Include="SettingsRef\settingsRef.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SettingsRef\ttsblacklistRef.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
