--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/packages.config
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/packages.config
@@ -1,16 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.9" targetFramework="net472" />
   <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Security" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="TwitchLib" version="3.1.1" targetFramework="net472" />
   <package id="TwitchLib.Api" version="3.1.3" targetFramework="net472" />
   <package id="TwitchLib.Api.Core" version="3.1.3" targetFramework="net472" />
@@ -26,4 +37,5 @@
   <package id="TwitchLib.Client.Models" version="3.1.5" targetFramework="net472" />
   <package id="TwitchLib.Communication" version="1.0.3" targetFramework="net472" />
   <package id="TwitchLib.PubSub" version="3.1.4" targetFramework="net472" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="net472" />
 </packages>
