sound list file generation
- Generate soundfile list
- Remove/Add sounds to list on startup

--- a/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
+++ b/Noice_Bot_Twitch/Noice_Bot_Twitch/Noice_Bot_Twitch.csproj
@@ -216,5 +216,8 @@
   <ItemGroup>
     <EmbeddedResource Include="SettingsRef\ttsblacklistRef.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SettingsRef\soundListRef.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
